--- a/revenues-test/index.html
+++ b/revenues-test/index.html
@@ -10,10 +10,10 @@
     <script src="//cdn.rawgit.com/q-m/d3.chart.sankey/master/d3.chart.sankey.min.js"></script>
     
 -->
-    <script src="/js/d3.v3.js"></script>
+    <script src="js/d3.v3.js"></script>
 <!--    <script src="/js/sankey.js"></script>-->
-    <script src="//cdn.rawgit.com/misoproject/d3.chart/master/d3.chart.min.js"></script>
-    <script src="/js/d3.chart.sankey.js"></script>
+    <script src="js/d3.chart.min.js"></script>
+    <script src="js/d3.chart.sankey.js"></script>
 
     <style>
       body {
