--- a/revenues-test/index.html
+++ b/revenues-test/index.html
@@ -2,23 +2,23 @@
 <html>
 	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <!--    <script type="text/javascript" src="js/jquery.min.js"></script>-->
 
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
 <!--    <link href="stylesheets/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">-->
-    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 <!--    <script src="js/bootstrap.min.js"></script>-->
 	
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" id="bootstrap-css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" id="bootstrap-css">
 <!--    <link href="stylesheets/font-awesome.min.css" rel="stylesheet" id="bootstrap-css">-->
 	
-	<script src="http://d3js.org/d3.v3.js"></script>
+	<script src="//d3js.org/d3.v3.js"></script>
 <!--	<script src="js/d3.v3.js"></script>-->
 	<script type="text/javascript" src="https://cdn.rawgit.com/Caged/d3-tip/master/index.js"></script>
 <!--	<script type="text/javascript" src="js/d3-tip-index.js"></script>-->
 
-	<!-- Get inicial sample from http://jsfiddle.net/QwMPS/ --> 
+	<!-- Get inicial sample from //jsfiddle.net/QwMPS/ -->
 	<script src="js/d3sankey.js"></script> 
 
   
