Changed d3 tip script reference to local - fix typo

--- a/revenues-test/index.html
+++ b/revenues-test/index.html
@@ -16,7 +16,7 @@
 	<script src="//d3js.org/d3.v3.js"></script>
 <!--	<script src="js/d3.v3.js"></script>-->
 <!--	<script type="text/javascript" src="https://cdn.rawgit.com/Caged/d3-tip/master/index.js"></script>-->
-	<script type="text/javascript" src="javascripts/d3-tip-index.js"></script>
+	<script type="text/javascript" src="js/d3-tip-index.js"></script>
 
 	<!-- Get inicial sample from //jsfiddle.net/QwMPS/ -->
 	<script src="js/d3sankey.js"></script> 
