NRGI copy-edits 01

--- a/revenues-test/index.html
+++ b/revenues-test/index.html
@@ -359,14 +359,14 @@
 
       <div class="navbar major">
 <!--          <a class="active" href="/index.html#header">Home</a>-->
-        <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/index.html#three">Data Stories</a>
-        <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/tools.html" class="active">Data Tools</a>
-        <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/datasets.html">Datasets</a>
-        <a href="https://yanoak.github.io/Myanmar-Jade-Data-Portal-Stories/about.html">About</a>
+        <a href="../index.html#three">Data Stories</a>
+        <a href="../tools.html" class="active">Data Tools</a>
+        <a href="../datasets.html">Datasets</a>
+        <a href="../about.html">About</a>
       </div>
     </br>
     <h1>Revenue Flows Explorer</h1>
-    <p>This tool lets you explore the revenues that are collected from jade and gems mining companies by various government departments, and how each revenue stream feeds into another. Best viewed on a laptop or desktop computer.</p>
+    <p>This tool lets you explore the different revenue streams paid by jade and gemstone mining companies to various government entities, and how each revenue stream feeds into another. The tool is best viewed on a laptop or desktop computer.</p>
 
   
     <h4>Select data source: 
@@ -387,7 +387,7 @@
 
 		</div>
     <h4>Where is the data from?</h4>
-    <p>The data used for this tool comes from the 2013-14, 2014-15, and 2015-16 EITI reports and summary sheets. The disaggregated company payments data for 2013-14 comes from the EIT summary sheet for that year, and the disaggregated company payments data for 2014-15 and 2015-16 comes from Annex 18 of those years' reports. The data for payments from companies not included in the EITI roconciliation scope come from Section 6.2 of each year's EITI report. Note that the reconciliation scope was reduced from from 10 billion MMK in 2013-14 to 750 million MMK in 2014-15 and 2015-16, resulting in many more companies included in those years.</p>
+    <p>The data used for this tool comes from the 2013-14, 2014-15, and 2015-16 EITI reports and summary sheets. The disaggregated company payments data for 2013-14 comes from the EITI summary sheet for that year, and the disaggregated company payments data for 2014-15 and 2015-16 comes from Annex 18 of those years' reports. The data for payments from companies not included in the EITI reconciliation scope comes from Section 6.2 of each year's EITI report. Note that the threshold for reporting was reduced from from 10 billion MMK in 2013-14 to 750 million MMK in 2014-15 and 2015-16, resulting in many more companies included in the reconciliation scope for those years.</p>
 
 		<script>
 		var zoom = {};
