pre launch edits

--- a/revenues-test/index.html
+++ b/revenues-test/index.html
@@ -387,7 +387,7 @@
 
 		</div>
     <h4>Where is the data from?</h4>
-    <p>The data used for this tool comes from the 2013-14, 2014-15, and 2015-16 EITI reports and summary sheets. The disaggregated company payments data for 2013-14 comes from the EITI summary sheet for that year, and the disaggregated company payments data for 2014-15 and 2015-16 comes from Annex 18 of those years' reports. The data for payments from companies not included in the EITI reconciliation scope comes from Section 6.2 of each year's EITI report. Note that the threshold for reporting was reduced from from 10 billion MMK in 2013-14 to 750 million MMK in 2014-15 and 2015-16, resulting in many more companies included in the reconciliation scope for those years.</p>
+    <p>The data used for this tool comes from the 2013-14, 2014-15, and 2015-16 EITI reports and summary sheets. The disaggregated company payments data for 2013-14 comes from the EITI summary sheet for that year. The disaggregated company payments data for 2014-15 and 2015-16 comes from Annex 18 of those years' reports. The data for payments from companies not included in the EITI reconciliation scope comes from Section 6.2 of each year's EITI report. Note that the threshold for reporting was reduced from MMK 10 billion in 2013-14 to MMK 750 million in 2014-15 and 2015-16, resulting in many more companies included in the reconciliation scope for those years.</p>
 
 		<script>
 		var zoom = {};
