--- a/revenues-test/index_mm.html
+++ b/revenues-test/index_mm.html
@@ -2,6 +2,17 @@
 <html>
 	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119271334-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-119271334-1');
+    </script>
+  
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <!--    <script type="text/javascript" src="js/jquery.min.js"></script>-->
 
