changed data source explaination copy

--- a/revenues-test/index.html
+++ b/revenues-test/index.html
@@ -480,12 +480,25 @@
 
 		</div>
     <h4>Where is the data from?</h4>
-    <p>The data used for this tool comes from the 2013-14, 2014-15, 2015-16, 2016-17 and 2017-18 EITI reports and summary sheets. 
+    <p>
+      The data used for this tool comes from the 2013-14, 2014-15, 2015-16, 2016-17 and 2017-18 EITI reports and summary sheets. 
+      The disaggregated company payments data for 2013-14 comes from the EITI summary sheet for that year. 
+      The disaggregated company payments data for 2014-15, 2015-16 and 2016-2017 comes from Annex 18 of those years' reports. 
+      The disaggregated company payments data for 2017-18 comes from Annex 12 of that year's report. 
+      The data for payments from companies not included in the EITI reconciliation scope comes from Section 6.2 of each year's
+       EITI report except for 2016-17 EITI report in which that data was disclosed in Section 3.5.2. 
+    </p>
+    <p>Note that the threshold amount for selecting the companies to be reported was reduced from MMK 10 billion 
+      in 2013-14 to MMK 750 million in 2014-15 and 2015-16, MMK 0.1 billion, MMK 0.5 billion and MMK 1 billion for 
+      the Ministry of Environmental Conservation, the Internal Revenue Department and the Myanmar Customs Department 
+      respectively in 2016-17, and MMK 0.5 billion in 2017-18, resulting in many more companies included in the reconciliation scope 
+      for those years.</p>
+    <!-- <p>The data used for this tool comes from the 2013-14, 2014-15, 2015-16, 2016-17 and 2017-18 EITI reports and summary sheets. 
       The disaggregated company payments data for 2013-14 comes from the EITI summary sheet for that year. 
       The disaggregated company payments data for 2014-15 and 2015-16 comes from Annex 18 of those years' reports. 
       The disaggregated company payments data for 2017-18 comes from Annex 12 of that year's report. 
       The data for payments from companies not included in the EITI reconciliation scope comes from Section 6.2 of each year's EITI report. 
-      Note that the threshold for reporting was reduced from MMK 10 billion in 2013-14 to MMK 750 million in 2014-15 and 2015-16, resulting in many more companies included in the reconciliation scope for those years.</p>
+      Note that the threshold for reporting was reduced from MMK 10 billion in 2013-14 to MMK 750 million in 2014-15 and 2015-16, resulting in many more companies included in the reconciliation scope for those years.</p> -->
 
 		<script>
 		var zoom = {};
